add super car html and css for first 9 challenges

--- a/index.html
+++ b/index.html
@@ -1,16 +1,125 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <link rel="stylesheet" href="style.css" />
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Not a Cool Page</title>
+        <title>Electric Super Cars</title>
     </head>
-    <header></header>
+    <header>
+        <h1>Electric Super Cars</h1>
+    </header>
     <body>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Labore libero
-        deserunt non unde eveniet sint fuga, consequatur vitae minima, illo,
-        pariatur inventore hic earum ratione doloribus tempora alias! Delectus,
-        quos?
+        <main>
+            <section>
+                <h2>List of Electric Super Cars</h2>
+                <ol>
+                    <li><a href="#profile-lotus">Lotus Evija</a></li>
+                    <li><a href="#profile-rimac">Rimac Concept One</a></li>
+                    <li><a href="#profile-porsche">Porsche Taycan</a></li>
+                    <li>Toyota Prius</li>
+                    <li>Nissan Leaf</li>
+                </ol>
+            </section>
+            <section>
+                <h2>
+                    <a href="https://en.wikipedia.org/wiki/Lotus_Evija"
+                        >Lotus Evija</a
+                    >
+                </h2>
+                <p class="profile-text" id="profile-lotus">
+                    Limited production electric sports car to be manufactured by
+                    British automobile manufacturer Lotus Cars. Unveiled in July
+                    2019, it is the first electric vehicle to be introduced and
+                    manufactured by the company. Codenamed "Type 130" and
+                    "Omega",
+                    <span class="emphasised-text"
+                        >its production will be limited to 130 units</span
+                    >.
+                </p>
+                <a href="https://en.wikipedia.org/wiki/Lotus_Evija"
+                    ><img
+                        src="1920px-2020_Lotus_Evija.jpg"
+                        alt="2020 Lotus Evija Taken at the 2020 London's Concours of Elegance."
+                /></a>
+                <p>
+                    By Liam Walker - From Discord server - With their
+                    permission,
+                    <a
+                        href="https://creativecommons.org/licenses/by-sa/4.0"
+                        title="Creative Commons Attribution-Share Alike 4.0"
+                        >CC BY-SA 4.0</a
+                    >,
+                    <a
+                        href="https://commons.wikimedia.org/w/index.php?curid=94875156"
+                        >Link</a
+                    >
+                </p>
+            </section>
+            <section>
+                <h2>
+                    <a href="https://en.wikipedia.org/wiki/Rimac_Concept_One"
+                        >Rimac Concept One</a
+                    >
+                </h2>
+                <p class="profile-text" id="profile-rimac">
+                    Two seat high performance electric car designed and
+                    manufacture in Croatia by Rimac Automobil.
+                </p>
+            </section>
+            <section>
+                <h2>
+                    <a
+                        target="_blank"
+                        href="https://en.wikipedia.org/wiki/Porsche_Taycan"
+                        >Porsche Taycan</a
+                    >
+                </h2>
+                <p class="profile-text" id="profile-porsche">
+                    Battery electric saloon and shooting brake produced by
+                    German automobile manufacturer Porsche.
+                </p>
+                <h3>Not very interesting facts</h3>
+                <ul>
+                    <li>Formally known as the Mission E</li>
+                    <li>Porsche's first fully-electric car</li>
+                    <li>
+                        Inital target of 20,000 units in first year of
+                        production
+                    </li>
+                </ul>
+            </section>
+            <section id="world-record">
+                <p>
+                    The Buckeye Bullet is a series of four experimental electric
+                    cars created by students from Ohio State University (a.k.a.
+                    the Buckeyes) as a joint project with Venturi. The cars were
+                    designed to break the land speed record on the Bonneville
+                    Speedway, a salt flat just outside Wendover, Utah, United
+                    States. The team first achieved its goal in October 2004, at
+                    271.737 mph (437.318 km/h) for the one mile world record,
+                    repeatedly increasing the record until setting a mile world
+                    record of 307.666 mph (495.140 km/h), in 2009, and a one
+                    kilometer world record of 341.264 mph (549.211 km/h), in
+                    2016. The VBB's have also been called the Venturi "Jamais
+                    Contente", referencing the first electrically powered
+                    vehicle to top 100 km/h.[1]
+                </p>
+            </section>
+            <section id="somewhere-to-build-a-grid">
+                <div class="grid-container">
+                    <div class="grid-item">1</div>
+                    <div class="grid-item">2</div>
+                    <div class="grid-item">3</div>
+                    <div class="grid-item">4</div>
+                    <div class="grid-item">5</div>
+                    <div class="grid-item">6</div>
+                    <div class="grid-item">7</div>
+                    <div class="grid-item">8</div>
+                    <div class="grid-item">9</div>
+                </div>
+            </section>
+        </main>
     </body>
     <footer></footer>
 </html>
