--- a/index.html
+++ b/index.html
@@ -89,6 +89,30 @@
                     </li>
                 </ul>
             </section>
+            <section id="somewhere-to-build-a-grid">
+                <h3>Grid Elements</h3>
+                <p>
+                    A grid layout must have a parent element with the <em>display</em> property set to <em>grid</em> or <em>inline-grid</em>
+                </p>
+                <p>
+                    Direct child elements of the grid container automatically become grid items
+                </p>
+                <div class="grid-container">
+                    <div class="grid-item"><a href="https://en.wikipedia.org/wiki/Lotus_Evija"
+                        ><img
+                            src="1920px-2020_Lotus_Evija.jpg"
+                            alt="2020 Lotus Evija Taken at the 2020 London's Concours of Elegance."
+                    /></a></div>
+                    <div class="grid-item">2</div>
+                    <div class="grid-item">3</div>
+                    <div class="grid-item">4</div>
+                    <div class="grid-item">5</div>
+                    <div class="grid-item">6</div>
+                    <div class="grid-item">7</div>
+                    <div class="grid-item">8</div>
+                    <div class="grid-item">9</div>
+                </div>
+            </section>
             <section id="world-record">
                 <p>
                     The Buckeye Bullet is a series of four experimental electric
@@ -105,19 +129,6 @@
                     Contente", referencing the first electrically powered
                     vehicle to top 100 km/h.[1]
                 </p>
-            </section>
-            <section id="somewhere-to-build-a-grid">
-                <div class="grid-container">
-                    <div class="grid-item">1</div>
-                    <div class="grid-item">2</div>
-                    <div class="grid-item">3</div>
-                    <div class="grid-item">4</div>
-                    <div class="grid-item">5</div>
-                    <div class="grid-item">6</div>
-                    <div class="grid-item">7</div>
-                    <div class="grid-item">8</div>
-                    <div class="grid-item">9</div>
-                </div>
             </section>
         </main>
     </body>
