add two electric supercar images and links to grid

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                 </p>
                 <a href="https://en.wikipedia.org/wiki/Lotus_Evija"
                     ><img
+                        class="large-image"
                         src="1920px-2020_Lotus_Evija.jpg"
                         alt="2020 Lotus Evija Taken at the 2020 London's Concours of Elegance."
                 /></a>
@@ -92,19 +93,34 @@
             <section id="somewhere-to-build-a-grid">
                 <h3>Grid Elements</h3>
                 <p>
-                    A grid layout must have a parent element with the <em>display</em> property set to <em>grid</em> or <em>inline-grid</em>
+                    A grid layout must have a parent element with the
+                    <em>display</em> property set to <em>grid</em> or
+                    <em>inline-grid</em>
                 </p>
                 <p>
-                    Direct child elements of the grid container automatically become grid items
+                    Direct child elements of the grid container automatically
+                    become grid items
                 </p>
                 <div class="grid-container">
-                    <div class="grid-item"><a href="https://en.wikipedia.org/wiki/Lotus_Evija"
-                        ><img
-                            src="1920px-2020_Lotus_Evija.jpg"
-                            alt="2020 Lotus Evija Taken at the 2020 London's Concours of Elegance."
-                    /></a></div>
-                    <div class="grid-item">2</div>
-                    <div class="grid-item">3</div>
+                    <div class="grid-item">
+                        <a
+                            target="_blank"
+                            href="https://en.wikipedia.org/wiki/Lotus_Evija"
+                        >
+                            <img
+                                src="1920px-2020_Lotus_Evija.jpg"
+                                alt="2020 Lotus Evija Taken at the 2020 London's Concours of Elegance."
+                            />
+                        </a>
+                    </div>
+                    <div class="grid-item">
+                        <a
+                            target="_blank"
+                            href="https://en.wikipedia.org/wiki/Porsche_Taycan"
+                        >
+                            <img
+                                src="2016-03-01_Geneva_Motor_Show_0977.jpeg"
+                                alt="Rimac Concept One Taken at the 2016 Geneva Motor Show"
                     <div class="grid-item">4</div>
                     <div class="grid-item">5</div>
                     <div class="grid-item">6</div>
